welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:2: error: too many arguments for method gauche: ()Unit
gauche(4)
      ^Source:4: error: too many arguments for method droite: ()Unit
droite(4)
      ^